--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,11 +5,11 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="2En5U[@^Yc[HPA9_AfLvb:gUG6F0P0uRPjlwN3<ru:pSrXZUT=ry2S?BC3BF>OS["
+application.secret = "2En5U[@^Yc[HPA9_AfLvb:gUG6F0P0uRPjlwN3<ru:pSrXZUT=ry2S?BC3BF>OS["
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs = "en"
 
 # Global object class
 # ~~~~~
@@ -59,11 +59,16 @@ application.langs="en"
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=ERROR
+logger.root = ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play = INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application = DEBUG
+
+# postgres configuration
+db.default.driver = org.postgresql.Driver
+db.default.url = "postgres://play:play@localhost/citizenReserve"
+ebean.default = "eu.factorx.citizenReserve.model.*"
 
