--- a/bower.json
+++ b/bower.json
@@ -1,33 +1,34 @@
 {
-    "name": "citizenReserve",
-    "version": "0.0.0",
-    "homepage": "",
-    "authors": [
-        "factorx"
-    ],
-    "license": "MIT",
-    "private": true,
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "public/components"
-    ],
-    "dependencies": {
-        "jquery": "*",
-        "jquery-ui": "*",
-        "underscore": "*",
-        "angular": "=1.3.5-build.3620+sha.5d36353",
-        "angular-animate": "*",
-        "angular-dynamic-locale": "*",
-        "angular-i18n": "*",
-        "angular-route": "*",
-        "angular-sanitize": "*",
-        "angucomplete": "*",
-        "font-awesome": "*",
-        "bootstrap": "=3.3.0",
-        "angular-bootstrap": "~0.12.0",
-        "messenger": "*",
-        "momentjs": "*"
-    }
+  "name": "citizenReserve",
+  "version": "0.0.0",
+  "homepage": "",
+  "authors": [
+    "factorx"
+  ],
+  "license": "MIT",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "public/components"
+  ],
+  "dependencies": {
+    "jquery": "*",
+    "jquery-ui": "*",
+    "underscore": "*",
+    "angular": "=1.3.5-build.3620+sha.5d36353",
+    "angular-animate": "*",
+    "angular-dynamic-locale": "*",
+    "angular-i18n": "*",
+    "angular-route": "*",
+    "angular-sanitize": "*",
+    "angucomplete": "*",
+    "font-awesome": "*",
+    "bootstrap": "=3.3.0",
+    "angular-bootstrap": "~0.12.0",
+    "messenger": "*",
+    "momentjs": "*",
+    "angular-rangeslider": "~0.0.11"
+  }
 }
