--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,13 +9,13 @@ application.secret = "2En5U[@^Yc[HPA9_AfLvb:gUG6F0P0uRPjlwN3<ru:pSrXZUT=ry2S?BC3
 
 # The application languages
 # ~~~~~
-application.langs = "en"
+application.langs = "fr,nl"
 
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=eu.factorx.citizens.Global
 
 # Router
 # ~~~~~
@@ -70,5 +70,5 @@ logger.application = DEBUG
 # postgres configuration
 db.default.driver = org.postgresql.Driver
 db.default.url = "postgres://play:play@localhost/citizens-reserve"
-ebean.default = "eu.factorx.citizenReserve.model.*"
+ebean.default = "eu.factorx.citizens.model.*"
 
