--- a/conf/test.conf
+++ b/conf/test.conf
@@ -15,7 +15,7 @@ application.langs = "en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=eu.factorx.citizens.Global
 
 # Router
 # ~~~~~
@@ -70,5 +70,5 @@ logger.application = DEBUG
 # postgres configuration
 db.default.driver = org.postgresql.Driver
 db.default.url = "postgres://play:play@localhost/citizenReserve"
-ebean.default = "eu.factorx.citizenReserve.model.*"
+ebean.default = "eu.factorx.citizens.model.*"
 
