--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,3 +72,6 @@ db.default.driver = org.postgresql.Driver
 db.default.url = "postgres://play:play@localhost/citizens-reserve"
 ebean.default = "eu.factorx.citizens.model.*"
 
+# export MailSMTPPassword=givenPassword
+mail.smtp.password=${?MailSMTPPassword}
+
