--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "jquery": "*",
     "jquery-ui": "*",
     "underscore": "*",
-    "angular": "=1.3.5-build.3620+sha.5d36353",
+    "angular": "=1.3.4",
     "angular-animate": "*",
     "angular-dynamic-locale": "*",
     "angular-i18n": "*",
@@ -34,6 +34,6 @@
     "venturocket-angular-slider": "~0.3.2"
   },
   "resolutions": {
-    "angular": "=1.3.5-build.3620+sha.5d36353"
+    "angular": "=1.3.4"
   }
 }
