--- a/public/components/angular/bower.json
+++ b/public/components/angular/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular",
-  "version": "1.3.5-build.3620+sha.5d36353",
+  "version": "1.3.4",
   "main": "./angular.js",
   "ignore": [],
   "dependencies": {
