--- a/conf/application.conf
+++ b/conf/application.conf
@@ -75,3 +75,5 @@ ebean.default = "eu.factorx.citizens.model.*"
 # export MailSMTPPassword=givenPassword
 mail.smtp.password=${?MailSMTPPassword}
 
+#host name
+citizens-reserve.hostname=${?AwacHostname}
