survey update request

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,4 +76,4 @@ ebean.default = "eu.factorx.citizens.model.*"
 mail.smtp.password=${?MailSMTPPassword}
 
 #host name
-citizens-reserve.hostname=${?AwacHostname}
+citizens-reserve.hostname=${?hostname}
