--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs = "fr,nl"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=eu.factorx.citizens.Global
+application.global = eu.factorx.citizens.Global
 
 # Router
 # ~~~~~
@@ -73,7 +73,9 @@ db.default.url = "postgres://play:play@localhost/citizens-reserve"
 ebean.default = "eu.factorx.citizens.model.*"
 
 # export MailSMTPPassword=givenPassword
-mail.smtp.password=${?MailSMTPPassword}
+mail.smtp.password = ${?MailSMTPPassword}
 
 #host name
-citizens-reserve.hostname=${?hostname}
+citizens-reserve.hostname = ${?hostname}
+citizens-reserve.myaccount.default = "http://citizensreserve2.factorx.eu/nl/myaccount"
+citizens-reserve.myaccount.nl = "http://citizensreserve2.factorx.eu/myaccount"
