--- a/conf/resources/mail.properties
+++ b/conf/resources/mail.properties
@@ -1,5 +1,5 @@
 #sender email address
-mail.username=noreply@myrmex.coop
+mail.username=noreply@factorx.eu
 #sender email password
 #mail.password=passwordNeedsToBeSetByShellEnvironnementVariable_MailSMTPPassword
 mail.password=${?MailSMTPPassword}
