Replaced citizensreserve.be by citizensreserve.factorx.eu

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,5 +77,6 @@ mail.smtp.password = ${?MailSMTPPassword}
 
 #host name
 citizens-reserve.hostname = ${?hostname}
+citizens-reserve.home = "http://citizensreserve2.factorx.eu"
 citizens-reserve.myaccount.default = "http://citizensreserve2.factorx.eu/nl/myaccount"
 citizens-reserve.myaccount.nl = "http://citizensreserve2.factorx.eu/myaccount"
