fixed error in global props

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,5 +78,5 @@ mail.smtp.password = ${?MailSMTPPassword}
 #host name
 citizens-reserve.hostname = ${?hostname}
 citizens-reserve.home = "http://citizensreserve.factorx.eu"
-citizens-reserve.myaccount.default = "http://citizensreserve.factorx.eu/nl/myaccount"
-citizens-reserve.myaccount.nl = "http://citizensreserve.factorx.eu/myaccount"
+citizens-reserve.myaccount.default = "http://citizensreserve.factorx.eu/myaccount"
+citizens-reserve.myaccount.nl = "http://citizensreserve.factorx.eu/nl/myaccount"
