cms url to bash

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,6 @@ mail.smtp.password = ${?MailSMTPPassword}
 
 #host name
 citizens-reserve.hostname = ${?hostname}
-citizens-reserve.home = "http://citizensreserve.factorx.eu"
-citizens-reserve.myaccount.default = "http://citizensreserve.factorx.eu/myaccount"
-citizens-reserve.myaccount.nl = "http://citizensreserve.factorx.eu/nl/myaccount"
+citizens-reserve.home = ${?cms_url_home}
+citizens-reserve.myaccount.default = ${?cms_url_home}"/myaccount"
+citizens-reserve.myaccount.nl = ${?cms_url_home}"/nl/myaccount"
