--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,7 +65,7 @@ logger.root = ERROR
 logger.play = INFO
 
 # Logger provided to your application:
-logger.application = ERROR
+logger.application = INFO
 
 # postgres configuration
 db.default.driver = org.postgresql.Driver
