Adptations for legacy users

--- a/conf/resources/mail.properties
+++ b/conf/resources/mail.properties
@@ -4,7 +4,7 @@ mail.username=noreply@factorx.eu
 #mail.password=passwordNeedsToBeSetByShellEnvironnementVariable_MailSMTPPassword
 mail.password=${?MailSMTPPassword}
 #sender email from
-mail.from.address=jenkins@factorx.eu
+mail.from.address=noreply@factorx.eu
 #SMTP configuration
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
