--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
     "jquery": "*",
     "jquery-ui": "*",
     "underscore": "*",
-    "angular": "=1.3.5",
-    "angular-animate": "=1.3.5",
+    "angular": "*",
+    "angular-animate": "*",
     "angular-dynamic-locale": "*",
     "angular-i18n": "*",
     "angular-route": "*",
