--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-i18n": "*",
     "angular-route": "*",
     "angular-sanitize": "*",
+    "angular-cookies": "*",
     "angucomplete": "*",
     "font-awesome": "*",
     "bootstrap": "=3.3.0",
@@ -39,7 +40,7 @@
     "regression-js": "Tom-Alexander/regression-js"
   },
   "resolutions": {
-    "angular": "=1.3.5",
+    "angular": "1.3.8",
     "d3": "~3.4"
   }
 }
